--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
             background:black;
             color:yellow;
         }
+        .Dignity{
+         background: red;
+}
         #note{
             color:pink;
         }
