--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
  body{
-            background:grey;
+            background:white;
         }
         
         .list{
-            background:black;
+            background:blue;
             color:yellow;
         }
         .Dignity{
